tests/fixtures/errors/e1302_extern_module_array_port.mimz
// expect: E1302
extern module Pll { in vals: bits[8][4] }
module M { }
